--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 </head>
 <body>
 	
-	<h1>378 Website Starter</h1>
+	<h1 class="arctext">ConnorBacon</h1>
 
 	
 
 <!-- Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   	<script src="js/plugin.js"></script>
+  	<script src="js/jquery.arctext.js"></script>
   	<script src="js/scripts.js"></script>
 
 </body>
